cluster/apps/traefik/traefik/ingress/observability/api-key-auth-vm-mcp.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/middleware_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-key-auth-vm-mcp
  namespace: observability
spec:
  plugin:
    traefik-api-key-auth:
      authenticationHeader: true
      authenticationHeaderName: X-API-KEY
      bearerHeader: false
      removeHeadersOnSuccess: true
      keys:
        - "env:VM_MCP_API_KEY"
